--- a/inputs.conf
+++ b/inputs.conf
@@ -1,3 +1,14 @@
-[monitor:///path/to/log/files]
-index = your_index
-sourcetype = your_sourcetype
+[monitor:///var/log/audit]
+index = main
+source = debian
+sourcetype = auditD
+
+[monitor:///var/log/aide]
+index = main
+source = debian
+sourcetype = aide
+
+[monitor:///var/log/sudo.log]
+index = main
+source = debian
+sourcetype = sudo
