--- a/inputs.conf
+++ b/inputs.conf
@@ -1,14 +1,17 @@
 [monitor:///var/log/audit]
+disabled = false
 index = main
 source = debian
 sourcetype = auditD
 
 [monitor:///var/log/aide]
+disabled = false
 index = main
 source = debian
 sourcetype = aide
 
 [monitor:///var/log/sudo.log]
+disabled = false
 index = main
 source = debian
 sourcetype = sudo
